<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>752</width>
    <height>646</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>SpellTracker</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <property name="minimumSize">
    <size>
     <width>0</width>
     <height>0</height>
    </size>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <widget class="QScrollArea" name="logicTrackerScrollArea">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>300</width>
        <height>0</height>
       </size>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
      <widget class="QWidget" name="logicTrackerScrollContent">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
         <width>715</width>
         <height>585</height>
        </rect>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
         <width>0</width>
         <height>0</height>
        </size>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="1">
         <layout class="QVBoxLayout" name="logicTrackerLayout">
          <item>
           <spacer name="verticalSpacer">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>752</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionNew_Tracker"/>
    <addaction name="actionOpen_Track"/>
    <addaction name="actionSave_Track"/>
    <addaction name="separator"/>
    <addaction name="actionQuit"/>
   </widget>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>View</string>
    </property>
    <addaction name="actionShow_Streaming_Popout"/>
    <addaction name="separator"/>
    <addaction name="actionShow_Item_Tracker"/>
    <addaction name="actionShow_Logic_Tracker"/>
   </widget>
   <widget class="QMenu" name="menuTracker">
    <property name="title">
     <string>Tracker</string>
    </property>
    <widget class="QMenu" name="menuGame_Data">
     <property name="title">
      <string>Game Data</string>
     </property>
    </widget>
    <addaction name="menuGame_Data"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuView"/>
   <addaction name="menuTracker"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionNew_Tracker">
   <property name="text">
    <string>New Track</string>
   </property>
  </action>
  <action name="actionOpen_Track">
   <property name="text">
    <string>Open Track</string>
   </property>
  </action>
  <action name="actionSave_Track">
   <property name="text">
    <string>Save Track</string>
   </property>
  </action>
  <action name="actionQuit">
   <property name="text">
    <string>Quit</string>
   </property>
  </action>
  <action name="actionShow_Streaming_Popout">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Show Streaming Popout</string>
   </property>
  </action>
  <action name="actionShow_Item_Tracker">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Item Tracker</string>
   </property>
  </action>
  <action name="actionShow_Logic_Tracker">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>false</bool>
   </property>
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>Logic Tracker</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
